test/spec_vectors/select/fail/module_9.wat
(module (func $type-num-vs-num (drop (select (i32.const 1) (f32.const 1.0) (i32.const 1)))))